<resources>
    <string name="app_name">BMS YOGA</string>
    <string name="hint_email"> Email</string>
    <string name="hint_password"> Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="todayFrag">Today Fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="tag_line">Inhale the future. Exhale the past.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="profileFrag">Profile Fragment</string>
    <string name="dashbaordFrag">"Dashboard Fragment"</string>
    <string name="Notification">Notification</string>
    <string name="su_texxt">Create Account?</string>
    <string name="f_pwd">Forgot Password?</string>
    <string name="btn_signup">Sign Up</string>
    <string name="su_text_head">Create Account</string>
    <string name="hint_name">Name</string>
    <string name="fp_text_head">Forgot Password</string>
    <string name="btn_fp_submit">SUBMIT</string>
    <string name="h_tips">Health Tips</string>
    <string name="services">Services</string>
    <string name="weeky">Weekly Stats</string>
    <string name="ursn">Username</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit Profile</string>
    <string name="abtus">About Us</string>
    <string name="ep_head">Edit</string>
    <string name="hint_uname">Username</string>
    <string name="btn_update">Update</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_logIn">Logged in as</string>
    <string name="sh_text_head">Trail Class Schedule</string>
    <string name="hint_date">Pick a date</string>
    <string name="hint_centre">Centre</string>
    <string name="hint_slot">Slot</string>
    <string name="btn_book">Book</string>
    <string name="btn_bookPack">Book Package</string>
    <string name="select_centre">Select Centre</string>
    <string name="select_slot">Select Slot</string>
    <string name="hint_session_count">Available Trail Classes</string>
    <string name="hint_session_count_tv">0</string>
    <string name="shp_text_head">Package Booking</string>
    <string name="ph_no">Phone Number</string>
    <string-array name="centres">
        <item>jayanagar</item>
        <item>vijayanagar</item>

    </string-array>
    <string-array name="slots">
        <item>1</item>
        <item>2</item>

    </string-array>

</resources>
