<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginScreen.create_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/fp_text_head"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/landing_text_color"
            android:textStyle="bold" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"
            android:theme="@style/su_TextLabel">

            <EditText
                android:id="@+id/input_email_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTrendsBackground"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"

            android:text="@string/btn_fp_submit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>