<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/re1"
    android:background="@color/colorPrimaryTransBlack"
    tools:context=".LoginScreen.LoginScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/le1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:src="@drawable/logo_small" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            app:errorTextAppearance="@style/error_appearance"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_person_outline"
                android:drawableStart="@drawable/ic_action_person_outline"
                android:hint="@string/hint_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"
            android:theme="@style/TextLabel"
            >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_action_lock_outline"
                android:drawableStart="@drawable/ic_action_lock_outline"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColor="@color/colorWhite"
                android:drawablePadding="10dp"
                android:inputType="textPassword"

                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btn_login"
            android:textSize="18sp"

            android:background="@color/colorAccent"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"

            >
            <TextView
                android:id="@+id/createA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/su_texxt"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:id="@+id/forgotP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/f_pwd"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/input_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            />
        <ProgressBar
            android:id="@+id/progB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/pAccent" />
    </LinearLayout>



</RelativeLayout>