<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"

android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomePage.package_book">

<LinearLayout
    android:id="@+id/schedule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/TrailAcc"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:layout_marginTop="15dp"

        android:text="@string/shp_text_head"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/landing_text_color"
        android:textStyle="bold" />

<!--
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name_su"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"

        android:theme="@style/su_TextLabel">

        <EditText
            android:id="@+id/input_name_datep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/hint_date"
            android:textColor="@color/colorTrendsBackground"
            android:textSize="18sp"
            />
    </android.support.design.widget.TextInputLayout>
-->
    <TextView
        android:id="@+id/input_name_datep"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_today_grey_24dp"
        android:drawableStart="@drawable/ic_today_grey_24dp"
        android:includeFontPadding="false"
        android:text="@string/hint_date"
        android:textAlignment="center"
        android:textSize="18sp"/>
    <!--
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email_su"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="13dp"
        android:theme="@style/su_TextLabel">

        <EditText
            android:id="@+id/input_centrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/hint_centre"

            android:textColor="@color/colorTrendsBackground"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    -->
    <TextView
        android:id="@+id/input_layout_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="13dp"
        android:textColor="@color/colorAccent"
        android:text="@string/select_centre" />

    <Spinner

        android:id="@+id/input_centrep"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="15dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/colorTrendsBackground"

        android:entries="@array/centres"
        android:padding="10dp"

        tools:layout_height="wrap_content" />

    <!--
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_su"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="13dp"

        android:theme="@style/su_TextLabel">

        <EditText
            android:id="@+id/input_slotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/hint_slot"

            android:textColor="@color/colorTrendsBackground"

            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    -->
    <TextView
        android:id="@+id/input_layout_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="13dp"
        android:textColor="@color/colorAccent"
        android:text="@string/select_slot" />

    <Spinner

        android:id="@+id/input_slotp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="15dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="18sp"
        android:textColor="@color/colorTrendsBackground"

        android:entries="@array/slots"
        android:padding="10dp"

        tools:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_bookp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"

        android:text="@string/btn_book"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progB_bookp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/pAccent" />
</LinearLayout>

<ImageView
    android:id="@+id/imageView_closeSchp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="top|right"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="12dp"
    android:clickable="true"
    android:src="@drawable/ic_close" />

</RelativeLayout>