<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".HomePage.dashboard">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/landing_text_color"
        android:elevation="4dp"
        app:theme="@style/ToolBarStyle"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"

        >
        <TextView
            android:id="@+id/services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/services"
            android:textColor="@color/landing_text_color"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TextView
                android:id="@+id/services_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_italic"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dashbaordFrag"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/landing_text_color"


                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/powered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:text="@string/h_tips"
            android:textColor="@color/landing_text_color"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">


            <TextView
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_italic"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/dashbaordFrag"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/landing_text_color"


                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>